<resources>
    <string name="app_name">微信</string>

    <!-- 发现页面和我的页面的字符资源 -->
    <string name="wechat_name">Mr.Bison</string>
    <string name="wechat_num">微信号：12345678901234</string>
    <string name="album_name">相册</string>
    <string name="collect_name">收藏</string>
    <string name="wallet_name">钱包</string>
    <string name="card_package_name">卡包</string>
    <string name="emoji_name">表情</string>
    <string name="setting_name">设置</string>
    <string name="moment_name">朋友圈</string>
    <string name="scan_name">扫一扫</string>
    <string name="shake_name">摇一摇</string>
    <string name="neaby_name">附近的人</string>
    <string name="bottle_name">漂流瓶</string>
    <string name="shopping_name">购物</string>
    <string name="games_name">游戏</string>

    <!-- BottomBar的标签 -->
    <string name="tab_wechat">微信</string>
    <string name="tab_contact">通讯录</string>
    <string name="tab_find">发现</string>
    <string name="tab_profile">我</string>
</resources>
