<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/normalBackground"
    android:paddingTop="20dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        style="@style/ItemHorizontalLinearLayout"
        android:layout_weight="10">

        <ImageView
            style="@style/ItemIvStyle"
            android:src="@drawable/ic_moment" />

        <TextView
            style="@style/ItemTextStyle"
            android:text="@string/moment_name" />
    </LinearLayout>

    <View
        style="@style/DividerView"
        android:layout_weight="5"/>

    <LinearLayout
        style="@style/ItemVerticalLinearLayout"
        android:layout_weight="20">

        <LinearLayout
            style="@style/ItemHorizontalLinearLayout"
            android:layout_weight="10">

            <ImageView
                style="@style/ItemIvStyle"
                android:src="@drawable/ic_scan" />

            <TextView
                style="@style/ItemTextStyle"
                android:text="@string/scan_name" />

        </LinearLayout>

        <View
            style="@style/settingDividerView"
            android:layout_width="match_parent"
            android:layout_height="2px"/>

        <LinearLayout
            style="@style/ItemHorizontalLinearLayout"
            android:layout_weight="10">

            <ImageView
                style="@style/ItemIvStyle"
                android:src="@drawable/ic_shake" />

            <TextView
                style="@style/ItemTextStyle"
                android:text="@string/shake_name" />
        </LinearLayout>
    </LinearLayout>

    <View
        style="@style/DividerView"
        android:layout_weight="5">
    </View>

    <LinearLayout
        style="@style/ItemVerticalLinearLayout"
        android:layout_weight="20">

        <LinearLayout
            style="@style/ItemHorizontalLinearLayout"
            android:layout_weight="10">

            <ImageView
                style="@style/ItemIvStyle"
                android:src="@drawable/ic_nearby" />

            <TextView
                style="@style/ItemTextStyle"
                android:text="@string/neaby_name" />
        </LinearLayout>

        <View
            style="@style/settingDividerView"
            android:layout_width="match_parent"
            android:layout_height="2px"/>

        <LinearLayout
            style="@style/ItemHorizontalLinearLayout"
            android:layout_weight="10">

            <ImageView
                style="@style/ItemIvStyle"
                android:src="@drawable/ic_bottle" />

            <TextView
                style="@style/ItemTextStyle"
                android:text="@string/bottle_name" />
        </LinearLayout>
    </LinearLayout>

    <View
        style="@style/DividerView"
        android:layout_weight="5">
    </View>

    <LinearLayout
        style="@style/ItemVerticalLinearLayout"
        android:layout_weight="20">

        <LinearLayout
            style="@style/ItemHorizontalLinearLayout"
            android:layout_weight="10">

            <ImageView
                style="@style/ItemIvStyle"
                android:src="@drawable/ic_shopping" />

            <TextView
                style="@style/ItemTextStyle"
                android:text="@string/shopping_name" />
        </LinearLayout>

        <View
            style="@style/settingDividerView"
            android:layout_width="match_parent"
            android:layout_height="2px"/>

        <LinearLayout
            style="@style/ItemHorizontalLinearLayout"
            android:layout_weight="10">

            <ImageView
                style="@style/ItemIvStyle"
                android:src="@drawable/ic_games" />

            <TextView
                style="@style/ItemTextStyle"
                android:text="@string/games_name" />
        </LinearLayout>
    </LinearLayout>

    <View
        style="@style/DividerView"
        android:layout_weight="23">
    </View>
</LinearLayout>
