<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cn.bisondev.tobewechat.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbarHeight"
        android:background="?attr/colorPrimary"
        android:theme="@style/AppTheme">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageButton
            android:layout_width="@dimen/toolbarIvWidth"
            android:layout_height="@dimen/toolbarHeight"
            android:layout_gravity="end"
            android:background="@drawable/ic_toolbar_ib"
            android:src="@drawable/ic_add" />

        <ImageButton
            android:layout_width="@dimen/toolbarIvWidth"
            android:layout_height="@dimen/toolbarHeight"
            android:layout_gravity="end"
            android:background="@drawable/ic_toolbar_ib"
            android:src="@drawable/ic_search" />

    </android.support.v7.widget.Toolbar>

    <android.support.v4.view.ViewPager
        android:id="@+id/fragmentViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </android.support.v4.view.ViewPager>

    <View
        android:background="@color/divideColor"
        android:layout_width="match_parent"
        android:layout_height="1px"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/tab_wechat"
            style="@style/BottomBarLinearLayout">

            <ImageView
                android:id="@+id/iv_wechat"
                style="@style/BottomBarImageView"
                android:src="@drawable/wechat_pressed" />

            <TextView
                android:id="@+id/tv_wechat"
                style="@style/BottomBarTextView"
                android:text="@string/tab_wechat"
                android:textColor="@color/bottombarPressed"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_contact"
            style="@style/BottomBarLinearLayout">

            <ImageView
                android:id="@+id/iv_contact"
                style="@style/BottomBarImageView"
                android:src="@drawable/contact_list_normal" />

            <TextView
                android:id="@+id/tv_contact"
                style="@style/BottomBarTextView"
                android:text="@string/tab_contact" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_find"
            style="@style/BottomBarLinearLayout">

            <ImageView
                android:id="@+id/iv_find"
                style="@style/BottomBarImageView"
                android:src="@drawable/find_normal" />

            <TextView
                android:id="@+id/tv_find"
                style="@style/BottomBarTextView"
                android:text="@string/tab_find" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_profile"
            style="@style/BottomBarLinearLayout">

            <ImageView
                android:id="@+id/iv_profile"
                style="@style/BottomBarImageView"
                android:src="@drawable/profile_normal" />

            <TextView
                android:id="@+id/tv_profile"
                style="@style/BottomBarTextView"
                android:text="@string/tab_profile" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:background="@color/divideColor"
        android:layout_width="match_parent"
        android:layout_height="1px"/>

</LinearLayout>